c/sys_calls.h

/* Time to struct tm  and reverse */
typedef struct {
  int tm_sec;       /* Seconds after the minute [0-60]   */
  int tm_min;       /* Minutes after the hour [0-59]     */
  int tm_hour;      /* Hours since midnight [0-23]       */
  int tm_mday;      /* Day of the month [1-31]           */
  int tm_mon;       /* Months since January [1-12] *******/
  int tm_year;      /* Years since 1900                  */
} my_tm_t;
extern int time_to_tm (const time_t *time_p, my_tm_t *my_tm_p);
extern int tm_to_time (const my_tm_t *my_tm_p, time_t *time_p);
/* Current offset of local time v.s. a given GMT time */
extern long gmt_offset (time_t *gmt_p);
/* Get user name from uid and get uid and gid from user name */
/* Return name len on success and ERROR (-1) on error (not found) */
extern int get_user_name_of_uid (int uid, char *name);
/* Return 0 on success and ERROR (-1) on error (not found) */
extern int get_ids_of_user_name (char *name, int *uid, int *gid);
/* Get group name from gid and get gid from group name */
/* Return name len on success and ERROR (-1) on error (not found) */
extern int get_group_name_of_gid (int gid, char *name);
/* Return 0 on success and ERROR (-1) on error (not found) */
extern int get_gid_of_group_name (char *name, int *gid);
extern int set_tty_attr (int fd, int mode);
/* Set/get blocking mode */
extern int set_blocking (int fd, boolean blocking);
extern int get_blocking (int fd);
/* May return ERROR, NONE or CLOSED */
extern int get_immediate (int fd);
/* Create/open/read/write/close/pipe a fd */
extern int fd_create (const char *path);
extern int fd_open (const char *path, int mode, int write_flag);
extern int fd_int_read (int fd, void *buffer, int nbytes);
extern int fd_int_write (int fd, void *buffer, int nbytes);
extern int fd_close (int fd);
extern int fd_pipe (int *fd1, int *fd2);