reposit/sys_calls.adb


  function Tm_To_Time (Time : Time_T) return Ada.Calendar.Time is
    Tm4C  : C_Tm_T;
    function C_Time_To_Tm (Time_P : System.Address;
                           Tm_P : System.Address)
             return C_Types.Int
      with Import => True, Convention => C, External_Name => "time_to_tm";
    Res : C_Types.Int;
  begin
    Res := C_Time_To_Tm (Time'Address, Tm4C'Address);
    if Res /= 0 then
      raise Constraint_Error;
    end if;
    return Day_Mng.Pack (
        Tm4C.Tm_Year, Tm4C.Tm_Mon, Tm4C.Tm_Mday,
        Tm4C.Tm_Hour, Tm4C.Tm_Min, Tm4C.Tm_Sec, 0);
  end Tm_To_Time;

  function Time_To_Tm (Time : Ada.Calendar.Time) return Time_T is
    Tm4C  : C_Tm_T;
    Dummy_Milli : Day_Mng.T_Millisecs;
    Time4C : Time_T;
    function C_Tm_To_Time (Tm_P : System.Address;
                           Time_P : System.Address)
             return C_Types.Int
      with Import => True, Convention => C, External_Name => "tm_to_time";
    Res : C_Types.Int;
  begin
    Day_Mng.Split (Time, Tm4C.Tm_Year, Tm4C.Tm_Mon, Tm4C.Tm_Mday,
                   Tm4C.Tm_Hour, Tm4C.Tm_Min, Tm4C.Tm_Sec, Dummy_Milli);
    Res := C_Tm_To_Time (Tm4C'Address, Time4C'Address);
    if Res /= 0 then
      raise Constraint_Error;
    end if;
    return Time4C;
  end Time_To_Tm;

  -- Get offset of local time versus given GMT time
  function Gmt_Offset (At_Time : Time_T := Now_Time_T) return Time_T is
    function C_Gmt_Offset (At_Time : System.Address) return C_Types.Long
      with Import => True, Convention => C, External_Name => "gmt_offset";
  begin
    if At_Time = Now_Time_T then
      return Time_T (C_Gmt_Offset (System.Null_Address));
    else
      return Time_T (C_Gmt_Offset (At_Time'Address));
    end if;
  end Gmt_Offset;

  -- Get effective user/group Id
  function Get_Effective_User_Id return Natural is
    function C_Geteuid return C_Types.Uid_T
      with Import => True, Convention => C, External_Name => "geteuid";
  begin
    return Natural(C_Geteuid);
  end Get_Effective_User_Id;

  function Get_Effective_Group_Id return Natural is
    function C_Getegid return C_Types.Uid_T
      with Import => True, Convention => C, External_Name => "getegid";
  begin
    return Natural(C_Getegid);
  end Get_Effective_Group_Id;

  -- Get user and group names and ids
  function Get_Name_Of_User_Id (User_Id : Natural) return String is
    Str : String (1 .. 1024);
    Res : C_Types.Int;
    function C_Get_User_Name_Of_Uid (Uid : C_Types.Int;
                                     Name : System.Address) return C_Types.Int
      with Import => True, Convention => C,
           External_Name => "get_user_name_of_uid";
  begin
    Res := C_Get_User_Name_Of_Uid (User_Id, Str(Str'First)'Address);
    if Res = C_Error then
      raise System_Error;
    end if;
    return Str (1 .. Res);
  end Get_Name_Of_User_Id;

  function Get_Ids_Of_User_Name (User_Name : String) return Ids_Rec is
    User_Name4C : constant String := Str_For_C (User_Name);
    Res : C_Types.Int;
    Ids : Ids_Rec;
    function C_Get_Ids_Of_User_Name (Name : System.Address;
                                     Uid : System.Address;
                                     Gid : System.Address) return C_Types.Int
      with Import => True, Convention => C,
           External_Name => "get_ids_of_user_name";
  begin
    Res := C_Get_Ids_Of_User_Name (User_Name4C'Address,
                   Ids.User_Id'Address, Ids.Group_Id'Address);
    if Res = C_Error then
      raise System_Error;
    end if;
    return Ids;
  end Get_Ids_Of_User_Name;

  function Get_Name_Of_Group_Id (Group_Id : Natural) return String is
    Str : String (1 .. 1024);
    Res : C_Types.Int;
    function C_Get_Group_Name_Of_Gid (Gid : C_Types.Int;
                                      Name : System.Address) return C_Types.Int
      with Import => True, Convention => C,
           External_Name => "get_group_name_of_gid";
  begin
    Res := C_Get_Group_Name_Of_Gid (Group_Id, Str(Str'First)'Address);
    if Res = C_Error then
      raise System_Error;
    end if;
    return Str (1 .. Res);
  end Get_Name_Of_Group_Id;

  function Get_Id_Of_Group_Name (Group_Name : String) return Natural is
    Group_Name4C : constant String := Str_For_C (Group_Name);
    Res : C_Types.Int;
    Id : Natural;
    function C_Get_Gid_Of_Group_Name (Name : System.Address;
                                     Gid : System.Address) return C_Types.Int
      with Import => True, Convention => C,
           External_Name => "get_gid_of_group_name";
  begin
    Res := C_Get_Gid_Of_Group_Name (Group_Name4C'Address, Id'Address);
    if Res = C_Error then
      raise System_Error;
    end if;
    return Id;
  end Get_Id_Of_Group_Name;

  -- Set mode for Stdin
  function Set_Tty_Attr (Fd : File_Desc;
                         Tty_Mode : Tty_Mode_List) return Boolean is
    Tty_Modes_For_C : constant array (Tty_Mode_List) of Integer := (
      Canonical    => 0,
      No_Echo      => 1,
      Char         => 2,
      Char_No_Echo => 3,
      Asynchronous => 4,
      Transparent  => 5);
    function C_Set_Tty_Attr (Fd : C_Types.Int; Mode : C_Types.Int)
                            return C_Types.Int
      with Import => True, Convention => C, External_Name => "set_tty_attr";
  begin
    return C_Set_Tty_Attr (Integer(Fd), Tty_Modes_For_C(Tty_Mode)) = 0;
  end Set_Tty_Attr;


  -- Set blocking mode for a non tty
  function Set_Blocking (Fd : File_Desc; Blocking : Boolean) return Boolean is
    function C_Set_Blocking (Fd : C_Types.Int; Blocking : C_Types.Int)
                            return C_Types.Int
      with Import => True, Convention => C, External_Name => "set_blocking";
  begin
    return C_Set_Blocking (Integer(Fd), (if Blocking then 1 else 0)) = 0;
  end Set_Blocking;

  -- Is blocking (for tty or not)
  function Is_Blocking (Fd : File_Desc) return Boolean is
    function C_Get_Blocking (Fd : C_Types.Int) return C_Types.Int
      with Import => True, Convention => C, External_Name => "get_blocking";
    Res : C_Types.Int;
  begin
    Res := C_Get_Blocking (Integer(Fd));
    if Res = C_Error then
      raise System_Error;
    end if;
    return Res = 1;
  end Is_Blocking;

  -- Get char from stdin
  procedure Get_Immediate (Fd : File_Desc;
                           Status : out Get_Status_List;
                           C      : out Character) is
    function C_Get_Immediate (Fd : C_Types.Int) return C_Types.Int
      with Import => True, Convention => C, External_Name => "get_immediate";
    C_None   : constant Integer := -2;
    C_Closed : constant Integer := -3;
    Res : C_Types.Int;
  begin
    C := Aski.Nul;
    Status := Error;
    Res := C_Get_Immediate (Integer(Fd));
    if Res >= 0 then
      Status := Got;
      C := Character'Val(Res);
    elsif Res = C_Error then
      Status := Error;
    elsif Res = C_None then
      Status := None;
    elsif Res = C_Closed then
      Status := Closed;
    else
      Status := Error;
    end if;
  end Get_Immediate;

  -- Create
  -- May raise Name_Error
  function Create (Name  : String) return File_Desc is
    Name4C : constant String := Name & Aski.Nul;
    function C_Fd_Create (Path : System.Address) return C_Types.Int
      with Import => True, Convention => C, External_Name => "fd_create";
    Res : C_Types.Int;
  begin
    Res := C_Fd_Create (Name4C'Address);
    if Res = C_Error then
      raise Name_Error;
    end if;
    Set_Cloexec (File_Desc(Res), True);
    return File_Desc(Res);
  end Create;

  -- Open
  -- May raise Name_Error
  function Open   (Name : String; Mode : File_Mode;
                   Write_Flag : Write_Flags := Start) return File_Desc is
    Name4C : constant String := Name & Aski.Nul;
    Modes4C : constant array (File_Mode) of Integer := (
      In_File    => 0,
      Out_File   => 1,
      Inout_File => 2);
    Flags4C : constant array (Write_Flags) of Integer := (
      Start  => 0,
      Append => 1,
      Trunc  => 2);
    function C_Fd_Open (Path : System.Address; Mode : C_Types.Int;
                        Flags : C_Types.Int) return C_Types.Int
      with Import => True, Convention => C, External_Name => "fd_open";
    Res : C_Types.Int;
  begin
    if Mode = In_File and then Write_Flag /= Start then
      raise Status_Error;
    end if;
    Res := C_Fd_Open (Name4C'Address, Modes4C(Mode), Flags4C(Write_Flag));
    if Res = C_Error then
      raise Name_Error;
    end if;
    Set_Cloexec (File_Desc(Res), True);
    return File_Desc(Res);
  end Open;

  -- Read / write on File_Desc
  Eagain : constant := 11;
  function Read  (Fd : File_Desc; Buffer : System.Address; Nbytes : Positive)
           return Natural is
    function C_Fd_Int_Read  (Fd     : C_Types.Int;
                             Buffer : System.Address;
                             Nbytes : C_Types.Int)
             return C_Types.Int
      with Import => True, Convention => C, External_Name => "fd_int_read";
    Res : C_Types.Int;
  begin
    Res := C_Fd_Int_Read (Integer(Fd), Buffer, Nbytes);
    if Res >= 0 then
      return Res;
    elsif Errno = Eagain then
      return 0;
    else
      raise System_Error;
    end if;
  end Read;

  function Write (Fd : File_Desc; Buffer : System.Address; Nbytes : Positive)
           return Natural is
    function C_Fd_Int_Write (Fd     : C_Types.Int;
                             Buffer : System.Address;
                             Nbytes : C_Types.Int)
             return C_Types.Int
      with Import => True, Convention => C, External_Name => "fd_int_write";
    Res : C_Types.Int;
  begin
    Res := C_Fd_Int_Write (Integer(Fd), Buffer, Nbytes);
    if Res >= 0 then
      return Res;
    elsif Errno = Eagain then
      return 0;
    else
      raise System_Error;
    end if;
  end Write;

  -- Close
  procedure Close (Fd : in File_Desc) is
    function C_Fd_Close (Fd : C_Types.Int) return C_Types.Int
      with Import => True, Convention => C, External_Name => "fd_close";
  begin
    if C_Fd_Close (Integer(Fd)) /= 0 then
      raise System_Error;
    end if;
  end Close;

  -- Create a pipe
  procedure Pipe (Fd1, Fd2 : out File_Desc) is
    function C_Fd_Pipe (Fd1, Fd2 : in System.Address) return C_Types.Int
      with Import => True, Convention => C, External_Name => "fd_pipe";
  begin
    if C_Fd_Pipe (Fd1'Address, Fd2'Address) /= 0 then
      raise System_Error;
    end if;
    Set_Cloexec (Fd1, True);
    Set_Cloexec (Fd2, True);
  end Pipe;

  -- Duplicate a file descriptor, using smallest or Start_At
  -- May raise System_Error
  function Dup (To_Copy : in File_Desc) return File_Desc is
    function C_Dup (Oldfd : in C_Types.Int) return C_Types.Int
      with Import => True, Convention => C, External_Name => "dup";
    Res : C_Types.Int;
  begin
    Res := C_Dup (Integer (To_Copy));
    if Res = C_Error then
      raise System_Error;
    end if;
    return File_Desc (Res);
  end Dup;

  function Dup2 (To_Copy, Set_Fd : in File_Desc) return File_Desc is
   function C_Dup2 (Oldfd : in C_Types.Int; Newfd : C_Types.Int)
                   return C_Types.Int
      with Import => True, Convention => C, External_Name => "dup2";
    Res : C_Types.Int;
  begin
    Res := C_Dup2 (C_Types.Int (To_Copy), C_Types.Int (Set_Fd));
    if Res = C_Error then
      raise System_Error;
    end if;
    Set_Cloexec (File_Desc(Res), True);
    return File_Desc (Res);
  end Dup2;
